--- a/README
+++ b/README
@@ -8,7 +8,7 @@ docs/manual.html for descriptions of how things work or look at the
 simple examples in the examples dir.
 
 
-Any and all feedback is welcome to:  Mike Smoot <mes5k@virginia.edu>
+Any and all feedback is welcome to:  Mike Smoot <mes@aescon.com>
 
 
 
