--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 
-Michael E. Smoot
-Daniel Aarno
+original author: Michael E. Smoot
+invaluable contributions: Daniel Aarno
+outstanding editing: Carol Smoot
