--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 
 original author: Michael E. Smoot
 invaluable contributions: Daniel Aarno
+more contributions: Erik Zeek
 outstanding editing: Carol Smoot
