--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@
 original author: Michael E. Smoot
 invaluable contributions: Daniel Aarno
 more contributions: Erik Zeek
+more contributions: Fabien Carmagnac (Tinbergen-AM)
 outstanding editing: Carol Smoot
