--- a/NEWS
+++ b/NEWS
@@ -91,3 +91,5 @@ See examples/test6.cpp for details.
 to using traits, which necessitates the minor version bump. Take a look 
 at test11.cpp and test12.cpp for examples on using ArgTraits for extending 
 tclap for different types.
+
+4/16/11 - Another long break!  Several minor bug and memory leak fixes.
