--- a/NEWS
+++ b/NEWS
@@ -93,3 +93,5 @@ at test11.cpp and test12.cpp for examples on using ArgTraits for extending
 tclap for different types.
 
 4/16/11 - Another long break!  Several minor bug and memory leak fixes.
+
+12/26/17 - v1.2 bug fix release
