--- a/INSTALL
+++ b/INSTALL
@@ -10,9 +10,9 @@ cloned or extracted it).
 CMake Installation
 ==================
 
-TCLAP uses the CMake (https://cmake.org/) to configure, build, test,
-and install the library. If you have CMake installed on your system
-you can build and install TCLAP in the following way (all commands
+TCLAP uses CMake (https://cmake.org/) to configure, build, test, and
+install the library. If you have CMake installed on your system you
+can build and install TCLAP in the following way (all commands
 executed from the root TCLAP directory).
 
 mkdir build
@@ -28,7 +28,10 @@ alternative install location with the --prefix flag.
 
 After TCLAP has been installed, you can use it by adding the install
 location to your compilers include path and define HAVE_TCLAP_CONFIG_H
-to use the config picked up by the system.
+to use the config picked up by the system. On most systems the
+defaults are good enough and it is not necessary to rely on the
+configuration detected by CMake - it is mostly used to work around
+some old compiler and Windows issues.
 
 VisualStudio Users
 ==================
