--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 
 original author: Michael E. Smoot
-invaluable contributions: Daniel Aarno
+invaluable contributions (current maintainer): Daniel Aarno
 more contributions: Erik Zeek
 more contributions: Fabien Carmagnac (Tinbergen-AM)
 outstanding editing: Carol Smoot
