--- a/INSTALL
+++ b/INSTALL
@@ -19,12 +19,13 @@ mkdir build
 cd build
 cmake ..
 cmake --build .
-cmake --install .
+cmake --install . [--prefix CMAKE_INSTALL_PREFIX]
 
 This will try to detect some parameters for your system and create a
 configuration file to match it. The last command will install the
-headers in the default install location, you can specify an
-alternative install location with the --prefix flag.
+headers in the default install location (requires CMake 3.15 or
+later), you can specify an alternative install location with the
+--prefix flag.
 
 After TCLAP has been installed, you can use it by adding the install
 location to your compilers include path and define HAVE_TCLAP_CONFIG_H
