--- a/INSTALL
+++ b/INSTALL
@@ -25,7 +25,8 @@ This will try to detect some parameters for your system and create a
 configuration file to match it. The last command will install the
 headers in the default install location (requires CMake 3.15 or
 later), you can specify an alternative install location with the
---prefix flag.
+--prefix flag. For earlier versions you can use the platform install
+command (e.g., `make install`).
 
 After TCLAP has been installed, you can use it by adding the install
 location to your compilers include path and define HAVE_TCLAP_CONFIG_H
